revised changes
memory model done