@@ -9,14 +9,17 @@ The Java programming language memory model works by examining each read in an ex
 The memory model describes possible behaviors of a program. An implementation is free to produce any code it likes, as long as all resulting executions of a program produce a result that can be predicted by the memory model.
 
 Java memory model consist of 2 important sections
- 1. **Stack**
+ 1. **JVM Stack**
  2. **Heap**
+ 3. **Permanent Generation**
 
-### Stack
+### JVM Stack
 * every thread has different stack
 * different scoping is maintained inside a stack
-* a codee block execution ends with the pop of all of its scoped variables from the stack
-* 
+* a code block execution ends with the pop of all of its scoped variables from the stack
+* If the computation in a thread requires a larger Java Virtual Machine stack than is permitted, the Java Virtual Machine throws a _StackOverflowError_.
+* If Java Virtual Machine stacks can be dynamically expanded, and expansion is attempted but insufficient memory can be made available to effect the expansion, or if insufficient memory can be made available to create the initial Java Virtual Machine stack for a new thread, the Java Virtual Machine throws an _OutOfMemoryError_.
+> An implementation of JVM can have **Native Method Stacks** to execute methods in native programming languages.
 
 
 ### Heap
@@ -26,20 +29,25 @@ Java memory model consist of 2 important sections
 * The heap parts are: Young Generation, Old or Tenured Generation, and Permanent Generation.
 
 #### Young Generation
-The young generation is the place where all the new objects are created. When the young generation is filled, garbage collection is performed. This garbage collection is called **Minor GC**. Young Generation is divided into three parts – Eden Memory and two Survivor Memory spaces.
+The young generation is the place where all the new objects are created. When the young generation is filled, garbage collection is performed. This garbage collection is called **Minor GC**. Young Generation is divided into three parts – ***Eden Memory*** and two ***Survivor Memory*** spaces.
 
-#### PermGen
-The Permanent generation contains metadata required by the JVM to describe the classes and methods used in the application. The permanent generation is populated by the JVM at runtime based on classes in use by the application. In addition, Java SE library classes and methods may be stored here.
+#### Old Generation Memory
+Old Generation memory contains the objects that are long-lived and survived after many rounds of Minor GC. Usually, garbage collection is performed in Old Generation memory when it’s full. Old Generation Garbage Collection is called Major GC and usually takes a longer time.
 
-Classes may get collected (unloaded) if the JVM finds they are no longer needed and space may be needed for other classes. The permanent generation is included in a full garbage collection.
+#### Garbage
 
-### final keyword
+* Java avoids memory leak by
+	* running on virtual machine
+	* adopting garbage collection stratefy (LISP used it first)
+* unreachable objects are garbage
+
+#### final keyword
 * stack to heap connection cannot be broken
 * the object's value can be changed but cannot assign to a new object
 * unsafe
 * no const correction feature in java, const implementation is not there, gives a compiler error on usage
 
-### Escaping references
+#### Escaping references
  A method which returns a map, can expose the map which can be corrupted by calling environment.
  Ways to avoid this issue
   * make the class an Iterable, but it have remove().
@@ -47,19 +55,21 @@ Classes may get collected (unloaded) if the JVM finds they are no longer needed 
   * make underlying object read-only
 
 
-### String pool
+### Permanent Generation
+The Permanent generation contains metadata required by the JVM to describe the classes and methods used in the application. The permanent generation is populated by the JVM at runtime based on classes in use by the application. In addition, Java SE library classes and methods may be stored here.
 
-### Garbage
-* Young memory
-* old memory
-* Survivor spaces
-* Java avoids memory leak by
-	* running on virtual machine
-	* adopting garbage collection stratefy (LISP used it first)
-* unreachable objects are garbage
-* gc() may not run when we invoke it
-* GC calls finalize() on object
-* never close resources in finalize as it might not be called.
+Classes may get collected (unloaded) if the JVM finds they are no longer needed and space may be needed for other classes. The permanent generation is included in a full garbage collection.
+
+#### Method Area
+Method Area is part of space in the Perm Gen and used to store class structure (runtime constants and static variables) and code for methods and constructors
+
+##### Runtime Constant Pool
+Runtime constant pool is per-class runtime representation of constant pool in a class. It contains class runtime constants and static methods. Runtime constant pool is part of the method area.
+
+
+### Memory Pool
+Memory Pools are created by JVM memory managers to create a pool of immutable objects if the implementation supports it. String Pool is a good example of this kind of memory pool. Memory Pool can belong to Heap or Perm Gen, depending on the JVM memory manager implementation.
+
 
 ## JVM
 `JVM intelligently identifies if an object lifecycle is ltd to its method / block then it is created in Stack instead of HEAP`
@@ -67,19 +77,22 @@ Classes may get collected (unloaded) if the JVM finds they are no longer needed 
 * running a pgm with ltd memory - give JVM args as -Xmx100m
 * jvisualvm.exe to monitor the memory allocations
 
-### Garbage Collection
-algorithms
+## Garbage Collection
+* gc() may not run when we invoke it
+* GC calls finalize() on object
+* never close resources in finalize as it might not be called.
+* The process of clearing out garbage is ***Mark & Sweep***
+* From Java 7, JVM maintains generational heap memory to assist GC process
 #### Mark & Sweep
-* 2 stage- mark, sweep
 * mark
 	* pause the pgm execution
 	* checks single live variable
 	* all references are recursively marked
-	* all marked objects are allocated contagious memory
+	* optionally all marked objects are allocated contagious memory
 * sweep
 	* references of unreachable unmarked objects are removed
 
-#### Generational GC Process
+### Generational GC Process
 1. First, any new objects are allocated to the eden space. Both survivor spaces start out empty.
 2. When the eden space fills up, a minor garbage collection is triggered.
 	* All minor garbage collections are always "Stop the World" events. This means that all application threads are stopped until the operation completes.
@@ -101,3 +114,33 @@ Switch|Description
 -Xmn|Sets the size of the Young Generation.
 -XX:PermSize|Sets the starting size of the Permanent Generation.
 -XX:MaxPermSize|Sets the maximum size of the Permanent Generation
+-XX:+UseSerialGC | To enable the Serial Collector
+-XX:+UseParallelGC | to enable new Parallel GC
+-XX:+UseParallelOldGC | to enable old Parallel GC
+-XX:ParallelGCThreads | To control number of garbage collector threads in Parallel GC
+-XX:+UseConcMarkSweepGC | To enable the CMS Collector
+-XX:ParallelCMSThreads=<n> | To set the number of threads in CMS collector
+-XX:+UseG1GC | To enable the G1 Collector
+-XX:SurvivorRatio | For providing ratio of Eden space and Survivor Space, for example if Young Generation size is 10m and VM switch is -XX:SurvivorRatio=2 then 5m will be reserved for Eden Space and 2.5m each for both the Survivor spaces. The default value is 8.
+-XX:NewRatio | For providing ratio of old/new generation sizes. The default value is 2.
+
+##### The Serial GC
+The serial collector is the default for client style machines in Java SE 5 and 6. With the serial collector, both minor and major garbage collections are done serially (using a single virtual CPU). In addition, it uses a mark-compact collection method.
+>The Serial GC is the garbage collector of choice for most applications that do not have low pause time requirements and run on client-style machines.
+
+##### The Parallel GC
+The parallel garbage collector uses multiple threads to perform the young genertion garbage collection. By default on a host with N CPUs, the parallel garbage collector uses N garbage collector threads in the collection. The Parallel collector is also called a throughput collector. Since it can use multilple CPUs to speed up application throughput. 
+
+> This collector should be used when a lot of work need to be done and long pauses are acceptable.
+
+1. **Parallel GC** : multi-thread young generation collector with a single-threaded old generation collector. The option also does single-threaded compaction of old generation.
+2. **Old Parallel GC** : the GC is both a multithreaded young generation collector and multithreaded old generation collector. It is also a multithreaded compacting collector.
+
+##### The Concurrent Mark Sweep (CMS) Collector
+collects the tenured generation. It attempts to minimize the pauses due to garbage collection by doing most of the garbage collection work concurrently with the application threads. Normally the concurrent low pause collector does not copy or compact the live objects. A garbage collection is done without moving the live objects. If fragmentation becomes a problem, allocate a larger heap.
+* CMS collector on young generation uses the same algorithm as that of the parallel collector.
+> should be used for applications that require low pause times and can share resources with the garbage collector
+
+
+##### The G1 Garbage Collector
+designed to be the long term replacement for the CMS collector. The G1 collector is a parallel, concurrent, and incrementally compacting low-pause garbage collector that has quite a different layout.
